changed metadata to reach website at different address

--- a/Projekt/OnlineFerries/.project
+++ b/Projekt/OnlineFerries/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OnlineFerries_14</name>
+	<name>OnlineFerries</name>
 	<comment></comment>
 	<projects>
 	</projects>
